26-04-2005 :
 - Improve error handling when reading configuration file.
 - Fixes compile error with unicode-enabled wxWidgets.

25-04-2005 :
 - Fixes to make wx-console compatible with wxWidgets 2.6.0.

24-03-2005 :
 - wxbMainFrame : Fix a bug with GTK+-1.2 which caused wx-console to crash
   when starting.
 - wxbRestorePanel : Fix a major bug which caused wx-console to enter in an
   infinite loop which allocate a lot of memory and could make the system crash.

10-03-2005 :
 - wxbMainFrame : Fix bug #0000221 (Debian 292517)

13-08-2004 :
 - wxbHistoryTextCtrl : Fixed Win32 build error
 - general : implemented command completion and interactive help.

06-08-2004 :
 - wxbRestorePanel : now parsing '+' sent by the director when building
     tree.
 - wxbRestorePanel : implemented .backups client=xxx (2.1)
 - wxbRestorePanel : implemented the director modification showing
     jobid when a job is started.

28-07-2004 :
 - wxbRestorePanel : implemented restore before=<Date> parameter.

17-07-2004 :
 - wxbRestorePanel & wxbHistoryTextCtrl : Fixed unsigned comparisons.
 - wxbRestorePanel : Fixed problem when the newly created job is not
    at the end of the list.

16-07-2004 :
 - wxbRestorePanel : Fixed crash when an error occurs while querying
    restore list (reported by Dan Langille).

15-07-2004 :
 - wxbMainFrame : When an unexpected question is in this format 
    (***? (yes/mod/no):), a list is shown to choose one of these 
    possibilities.
 - wxbRestorePanel : Fixed crash when there is no backup available
     (fresh install) 
 - wxbHistoryTextCtrl : Created a new text control that keep an history
     of typed commands.

14-07-2004 :
 - wxbMainFrame : Fixed config file problem when changing the default
     configuration file (Linux)

03-07-2004 :
 - wxbConfigPanel : Fixed ?: operator cast problem with gcc 2.95.

25-06-2004 :
 - wxbRestorePanel : Fix file size truncated if >100mb.

14-06-2004 :
 - wxbConfigPanel : fixed tests

22-05-2004 :